--- a/Labb_2_Blog/appsettings.json
+++ b/Labb_2_Blog/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection" : "Server=localhost\\SQLExpress;Database=Labb2BlogDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
