--- a/Labb_2_Blog/appsettings.json
+++ b/Labb_2_Blog/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection" : "Server=localhost\\SQLExpress;Database=Labb2BlogDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BlogApiDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;Command Timeout=30"
   },
   "Logging": {
     "LogLevel": {
